--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+httpx==0.27.2
 aiofiles
+apscheduler
 aiohttp
 asyncio
 beautifulsoup4
@@ -8,10 +10,11 @@ gitpython
 hachoir
 heroku3
 motor
-pillow==10.3.0
+pillow==9.5.0
 psutil
+py-tgcalls==0.9.7
 pykeyboard
-pyrogram==2.0.106
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.24.zip
 python-dotenv
 pyyaml
 requests
@@ -21,11 +24,4 @@ tgcrypto
 unidecode
 yt-dlp
 youtube-search
-# Use Git version of youtube-search-python (remove PyPI one to avoid conflict)
-git+https://github.com/CertifiedCoders/youtube-search-python.git@v1.6.6.post1
-
-# Use working alternative of pytgcalls
-py-tgcalls==1.2.9
-
-# Use public fork of ntgcalls
-git+https://github.com/TG-Musics/ntgcalls.git#egg=ntgcalls
+youtube-search-python
